Added product, checkout, cart, and thank you page

--- a/components/header.html
+++ b/components/header.html
@@ -6,12 +6,19 @@
             <input type="text" class="search-bar" placeholder="חיפוש מוצר...">
         </div>
         <ul class="nav-links">
-            <li><a href="/group14/pages/mac.html">Mac</a></li>
-            <li><a href="/group14/pages/ipad.html">iPad</a></li>
-            <li><a href="/group14/pages/iphone.html">iPhone</a></li>
-            <li><a href="/group14/pages/watch.html">Watch</a></li>
-            <li><a href="/group14/pages/accessories.html">אביזרים</a></li>
+            <li><a href="/group14/pages/products.html?category=mac">Mac</a></li>
+            <li><a href="/group14/pages/products.html?category=ipad">iPad</a></li>
+            <li><a href="/group14/pages/products.html?category=iphone">iPhone</a></li>
+            <li><a href="/group14/pages/products.html?category=watch">Watch</a></li>
+            <li><a href="/group14/pages/products.html?category=accessories">אביזרים</a></li>
             <li><a href="/group14/pages/contact.html">צור קשר</a></li>
+            <li><a href="/group14/pages/login.html">Login</a></li>
+            <li>
+                <a href="/group14/pages/cart.html" class="cart-indicator">
+                    🛒
+                </a>
+            </li>
+
         </ul>
         <div class="auth-reseller">
             <img src="/group14/img/logo.jpg" alt="Apple Authorized Reseller">
