changed cart to logo

--- a/components/header.html
+++ b/components/header.html
@@ -15,7 +15,7 @@
             <li><a href="/group14/pages/login.html">Login</a></li>
             <li>
                 <a href="/group14/pages/cart.html" class="cart-indicator">
-                    🛒
+                    <img src="/group14/img/cart.jpg" alt="Cart" width="24" height="24">
                 </a>
             </li>
 
