--- a/part2/components/header.html
+++ b/part2/components/header.html
@@ -6,22 +6,21 @@
             <input type="text" class="search-bar" placeholder="חיפוש מוצר...">
         </div>
         <ul class="nav-links">
-            <li><a href="/group14/part2/pages/products.html?category=mac">Mac</a></li>
-            <li><a href="/group14/part2/pages/products.html?category=ipad">iPad</a></li>
-            <li><a href="/group14/part2/pages/products.html?category=iphone">iPhone</a></li>
-            <li><a href="/group14/part2/pages/products.html?category=watch">Watch</a></li>
-            <li><a href="/group14/part2/pages/products.html?category=accessories">אביזרים</a></li>
-            <li><a href="/group14/part2/pages/contact.html">צור קשר</a></li>
-            <li><a href="/group14/part2/pages/login.html">Login</a></li>
+            <li><a href="products.html?category=mac">Mac</a></li>
+            <li><a href="products.html?category=ipad">iPad</a></li>
+            <li><a href="products.html?category=iphone">iPhone</a></li>
+            <li><a href="products.html?category=watch">Watch</a></li>
+            <li><a href="products.html?category=accessories">אביזרים</a></li>
+            <li><a href="contact.html">צור קשר</a></li>
+            <li><a href="login.html">Login</a></li>
             <li>
-                <a href="/group14/part2/pages/cart.html" class="cart-indicator">
-                    <img src="/group14/part2/img/cart.jpg" alt="Cart" width="24" height="24">
+                <a href="cart.html" class="cart-indicator">
+                    <img src="{{prefix}}/img/cart.jpg" alt="Cart" width="24" height="24">
                 </a>
             </li>
-
         </ul>
         <div class="auth-reseller">
-            <img src="/group14/part2/img/logo.jpg" alt="Apple Authorized Reseller">
+            <img src="{{prefix}}/img/logo.jpg" alt="Apple Authorized Reseller">
         </div>
     </nav>
 </header>
