--- a/part2/components/header.html
+++ b/part2/components/header.html
@@ -15,12 +15,12 @@
             <li><a href="login.html">Login</a></li>
             <li>
                 <a href="cart.html" class="cart-indicator">
-                    <img src="{{prefix}}/img/cart.jpg" alt="Cart" width="24" height="24">
+                    <img src="img/cart.jpg" alt="Cart" width="24" height="24">
                 </a>
             </li>
         </ul>
         <div class="auth-reseller">
-            <img src="{{prefix}}/img/logo.jpg" alt="Apple Authorized Reseller">
+            <img src="img/logo.jpg" alt="Apple Authorized Reseller">
         </div>
     </nav>
 </header>
