--- a/part2/css/contact.css
+++ b/part2/css/contact.css
@@ -103,3 +103,21 @@ body.contact-page {
     width: 24px;
     height: 24px;
 }
+
+.form-message {
+    margin-top: 1rem;
+    padding: 1rem;
+    border-radius: 4px;
+}
+
+.success-message {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.error-message {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
