--- a/part2/components/header.html
+++ b/part2/components/header.html
@@ -28,6 +28,9 @@
                     <img src="{{prefix}}/img/cart.jpg" alt="Cart" width="24" height="24">
                 </a>
             </li>
+            <li class="auth-reseller">
+                <img src="{{prefix}}/img/logo.jpg" alt="Apple Logo" width="24" height="24">
+            </li>
         </ul>
     </nav>
 </header>
