Fixed header styling

--- a/part3/components/header.html
+++ b/part3/components/header.html
@@ -19,6 +19,7 @@
         <div class="user-cart-section">
             <a href="cart.html" class="cart-indicator">
                 <img src="{{prefix}}/img/cart.jpg" alt="Cart" width="24" height="24">
+                <span class="cart-count hidden">0</span>
             </a>
             <div class="auth-links">
                 <a href="login.html" class="login-link">התחברות</a>
